SAMSUNG MSSSD Emulator
This patch adds ability to emulate SAMSUNG MSSSD on top of NVME device.
MSSSD is a dual mode CXL device. It appears as a CXL Type 3 Device in
addition to existing NVME device. MSSSD creates 1:1 mapping from HDM to
full LBA range. User can use legacy nvme driver to interact with MSSSD or
use regular load/store instruction to interact with the device.
Additional OS support is needed to use MSSSD HDM with a file system.

The following command shows an example how to use MSSSD emulation.

qemu-system-x86_64 -M q35,hmat=on,cxl=on -m 2G -cpu host -smp 2 -enable-kvm \
    -object memory-backend-ram,id=main-mem,size=2G \
    -numa node,memdev=main-mem,cpus=0-1,nodeid=0,initiator=0 \
    -net nic,model=virtio -net user \
    -drive file=focal.img,format=raw \
    -drive file=cxl-type3.img,if=none,format=raw,cache=none,id=id0 \
    -object memory-backend-file,id=cxl-mem1,share=on,mem-path=cxl-type3.img,size=1000G \
    -object memory-backend-file,id=cxl-mem1-lsa,share=on,mem-path=cxl-mem1-lsa,size=1K \
    -device pxb-cxl,id=cxl.0,bus=pcie.0,bus_nr=52,id=0 -device cxl-rp,id=rp0,bus=cxl.0,addr=0.0,chassis=0,slot=0 \
    -device nvme-msssd,drive=id0,id=nvme0,serial=serial0,bus=rp0,memdev=cxl-mem1,id=cxl-pmem0,lsa=cxl-mem1-lsa \
    -kernel bzImage-5.18 \
    -append "console=ttyS0 root=/dev/sda ro rootfstype=ext4"

Signed-off-by: Tong Zhang <t.zhang2@samsung.com>

--- a/hw/Kconfig
+++ b/hw/Kconfig
@@ -23,6 +23,7 @@ source misc/Kconfig
 source net/Kconfig
 source nubus/Kconfig
 source nvme/Kconfig
+source nvme-msssd/Kconfig
 source nvram/Kconfig
 source pci-bridge/Kconfig
 source pci-host/Kconfig
