--- a/hw/meson.build
+++ b/hw/meson.build
@@ -23,6 +23,7 @@ subdir('misc')
 subdir('net')
 subdir('nubus')
 subdir('nvme')
+subdir('nvme-msssd')
 subdir('nvram')
 subdir('pci')
 subdir('pci-bridge')
